Update CSS issue cutting off buttons Format main.html to ensure I can collapse areas in VS Code

--- a/cmd/play-server/static/styles/site.css
+++ b/cmd/play-server/static/styles/site.css
@@ -128,7 +128,8 @@ input, pre {
 }
 main {
   background-color: #FFF;
-  height: calc(100vh - 120px);
+  min-height: calc(100vh - 120px);
+  height: 100%;
 }
 
 footer {
